[metadata]
name = bandit
summary = Security oriented static analyser for python code.
description-file =
    README.md
author = OpenStack Security Group
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Security/Projects/Bandit
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: Security

[entry_points]
console_scripts =
    bandit = bandit.bandit:main
bandit.formatters =
    csv = bandit.core.formatters:report_csv
    json = bandit.core.formatters:report_json
    txt = bandit.core.formatters:report_text
    xml = bandit.core.formatters:report_xml
bandit.plugins =
    asserts = bandit.plugins.asserts
    blacklist_calls = bandit.plugins.blacklist_calls
    blacklist_imports = bandit.plugins.blacklist_imports
    crypto_request_no_cert_validation = bandit.plugins.crypto_request_no_cert_validation
    exec_as_root = bandit.plugins.exec_as_root
    exec = bandit.plugins.exec
    general_bad_file_permissions = bandit.plugins.general_bad_file_permissions
    general_bind_all_interfaces = bandit.plugins.general_bind_all_interfaces
    general_hardcoded_password = bandit.plugins.general_hardcoded_password
    general_hardcoded_tmp = bandit.plugins.general_hardcoded_tmp
    injection_paramiko = bandit.plugins.injection_paramiko
    injection_shell = bandit.plugins.injection_shell
    injection_sql = bandit.plugins.injection_sql
    injection_wildcard = bandit.plugins.injection_wildcard
    insecure_ssl_tls = bandit.plugins.insecure_ssl_tls
    jinja2_templates = bandit.plugins.jinja2_templates
    mako_templates = bandit.plugins.mako_templates
    secret_config_option = bandit.plugins.secret_config_option
    try_except_pass = bandit.plugins.try_except_pass
    xml = bandit.plugins.xml


[files]
package_data =
    bandit = config/bandit.yaml
data_files =
    bandit =
        share/bandit/wordlist/ = wordlist/default-passwords
